<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="@dimen/activity_horizontal_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/lblForgotPassword"
            style="@style/ShadowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_password_info"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text" />

        <EditText
            android:id="@+id/et_forgot_password"
            style="@style/SignInEditText"
            android:layout_below="@+id/lblForgotPassword"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_forgotPassword"
            style="@style/ShadowText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_forgot_password"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background_states"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_submit"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>
    <Button
        android:id="@+id/btn_login"
        style="@style/ShadowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background_states"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_login"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>